package ecourse.base.ExamMagnament.domain;

public enum QuestionType {
    MULTIPLE_CHOICE,
    TRUE_OR_FALSE,
    SHORT_ANSWER,
    MISSING_WORD,
    MATCHING,
    NUMERICAL;
}
